#2 edit build.gradle