@@ -35,7 +35,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
     runtimeOnly 'com.mysql:mysql-connector-j'
+    testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
+    testImplementation "org.testcontainers:mysql:1.20.1"
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
@@ -81,6 +84,21 @@ tasks.openApiGenerate {
             }
             break;
     }
+}
+
+tasks.test {
+    // Groovyでのテスト時、Sharing のWARNINGエラーを消去する
+    jvmArgs "-Xshare:off";
+}
+
+tasks.withType(Test){
+    // Dynamic loading のWARNINGエラーを消去する
+    jvmArgs "-XX:+EnableDynamicAgentLoading";
+}
+
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs << '-Xlint:unchecked'
 }
 
 mybatisGenerator {
